# cpi-init

./: Anchor.toml
programs/callee-program/: Cargo.toml
programs/callee-program/src/: lib.rs
programs/cpi-init/: Cargo.toml
programs/cpi-init/src/: lib.rs
tests/: cpi-init.ts
